added docs, cleaned cors filter